projet_gl/src/test/deca/syntax/valid/return/returnInt.deca
// Description:
//    test parser for return.
//
// Resultats:
//    `> [16, 0] Program
//       +> ListDeclClass [List with 0 elements]
//       `> [16, 0] Main
//          +> ListDeclVar [List with 0 elements]
//          `> ListInst [List with 1 elements]
//             []> [17, 4] Return
//             `> [17, 11] Int (1)
//
// Historique:
//    cree le 14/01/2024

{
    return 1;
}