projet_gl/src/test/deca/syntax/invalid/print/incorrectPrint2.deca
// Description:
//    invalid test parser for print.
//
// Resultats:
//    ligne 11 : left-hand side of assignment is not an lvalue
//
// Historique:
//    cree le 13/01/2024

{
    print(1=3-3);
}